<resources>
    <string name="app_name">Frenzy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="frenzy">Frenzy</string>
    <string name="orderDetails">Order Details</string>
    <string name="orderItem">Order Item</string>
    <string name="name">Name : </string>
    <string name="address">Address : </string>
    <string name="phone">Phone Num : </string>
    <string name="price">Price : </string>
    <string name="quantity">Quantity : </string>
    <string name="shoes">Shoes</string>
    <string name="tshirt">t_shirts</string>
    <string name="accessory">accessories</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome back</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="welcome_in_frenzy">Welcome to Frenzy</string>
    <string name="sign_up_txt">Sign Up</string>
    <string name="username">Username</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="delete">Delete</string>
    <string name="no_network_connection">no network available</string>
    <string name="no_match_results">no result matches</string>
    <string name="no_internet_connection">no internet connection \n please check your connection to continue</string>
    <string name="orderNumber">order num : </string>
    <string name="date">Created At : </string>
    <string name="reviews">Reviews</string>
    <string name="description">Description</string>
    <string name="available_sizes">Available Sizes</string>
    <string name="show_more">show more</string>
    <string name="show_less">show less</string>
    <string name="coupon">Coupon</string>
    <string name="save_the_code_to_apply_the_discount">Save the code to apply the discount</string>
    <string name="copy">Copy</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="ok"> ok </string>
    <string name="are_you_sure">are you sure you want to sign out ?</string>


    <string name="data">Created At :</string>
    <string name="lastname">lastname</string>
    <string name="firstname">firstname</string>
    <string name="Orders">Orders</string>
    <string name="OrderNum">Order Num</string>
    <string name="OrderItems">Order Items</string>
    <string name="Oreders">Orders</string>


    <string name="add_location">Add Location</string>
    <string name="your_current_location">Your Current Location</string>
    <string name="choose_another_location">Choose Another Location</string>
    <string name="complete_location_details">Complete Location Details</string>
    <string name="messageHomeMapAlert">Are you sure you want to choose </string>
    <string name="chooseSpecificPlace">choose more specific place please</string>
    <string name="yesMapAlert">Yes</string>
    <string name="CancelMapAlert">Cancel</string>
    <string name="errorFavMapAlert"> Could not find location</string>
    <string name="available_items" translatable="false">Available Items</string>
    <string name="couponSaved"> Coupon saved.Use it during checkout</string>
    <string name="deleteAddressTitle"> Delete Address</string>
    <string name="deleteAddressMessage"> Are you sure you want to delete this address?</string>
    <string name="homeDeleteAddressMessage">Default address Can\'t be deleted</string>
    <string name="online_payment">Online Payment</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="discount_code">Discount Code</string>
    <string name="check_out">Check Out</string>
    <string name="product_fees">Products Price:</string>
    <string name="delivery_fees">Delivery fees:</string>
    <string name="discount">Discount:</string>
    <string name="total_price">Total Price:</string>
    <string name="checkout">CheckOut</string>
    <string name="payment_method">Payment Method</string>
    <string name="todo">TODO</string>
    <string name="cant_pay_in_cash">Can\'t Pay in Cash</string>
    <string name="large_amount_of_money">It is a large amount of money. You should pay with PayPal.</string>
    <string name="currency">Currency</string>
    <string name="language">Language</string>
    <string name="addressSetting">Address</string>

    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="home">home</string>
    <string name="category">category</string>
    <string name="favourites">favourites</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="wishlist">WishList</string>
    <string name="hello">Hello</string>
    <string name="orders">Orders</string>
    <string name="more">MORE</string>
    <string name="item_name">Item Name</string>
    <string name="logout">Logout</string>
    <string name="search">search</string>
    <string name="brands">Brands</string>
    <string name="find_product">search for product</string>
    <string name="choose_language">Choose Language</string>
    <string name="no_orders_found">there is no orders found</string>
    <string name="proceed_to_checkout">Proceed To CheckOut</string>
    <string name="shop_with_joy_not_stress">Shop with joy , not stress</string>
    <string name="choose_size_color_title">Choose Size and Color</string>
    <string name="must_choose_size_color_message">You must choose the size and the color of the product</string>
    <string name="forget_password">forget Password</string>
    <string name="deleteMessage">Are You Sure You Want To Delete This Item?</string>
    <string name="no">No</string>
    <string name="go_home">Go To Home</string>
    <string name="order_done">Order Done Successfully</string>
    <string name="network_lost">Network Lost</string>
    <string name="network_lost_title">check your network then try again</string>
    <string name="no_items_in_wish_list_yet">No Items in Wish list yet</string>
    <string name="no_orders_yet" >No Orders yet</string>
    <string name="no_favourite_items_yet">No Favourite Items yet</string>
    <string name="verifying_email" >Please verify your Email ...</string>
    <string name="there_is_no_products_found">there is no products found</string>


</resources>