<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Payment.UI.View.PaymentFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/settingTembratureCardView"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:elevation="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settingTembratureConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView

                android:id="@+id/settingTembratureTV"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/payment_method"
                android:textColor="@color/primary"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/settingTembratureRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settingTembratureTV"
                app:layout_constraintVertical_bias="0.523">

                <RadioButton
                    android:id="@+id/onlinePaymentRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"

                    android:buttonTint="@color/primary"
                    android:text="@string/online_payment"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/cashPaymentRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:buttonTint="@color/primary"
                    android:text="@string/cash_on_delivery"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    tools:ignore="TouchTargetSizeCheck" />

            </RadioGroup>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/discountCode"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:elevation="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="@+id/settingTembratureCardView"
        app:layout_constraintStart_toStartOf="@id/settingTembratureCardView"
        app:layout_constraintTop_toBottomOf="@id/settingTembratureCardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/discountConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView

                android:id="@+id/discount"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/discount_code"
                android:textColor="@color/primary"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/discountImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/coupon_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.055"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/discount"
                android:contentDescription="@string/todo" />

            <EditText
                android:id="@+id/discountCodeET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/coupon"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/discountImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.055"
                app:layout_constraintStart_toEndOf="@id/discountImage"
                app:layout_constraintTop_toTopOf="@+id/discountImage" />

            <ImageView
                android:id="@+id/verfyIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintBottom_toBottomOf="@id/discountCodeET"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/discountCodeET"
                app:layout_constraintTop_toTopOf="@id/discountCodeET" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/CheckOutCard"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:elevation="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="@+id/discountCode"
        app:layout_constraintStart_toStartOf="@id/discountCode"
        app:layout_constraintTop_toBottomOf="@id/discountCode">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/CheckOutCardConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView

                android:id="@+id/CheckOut"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/check_out"
                android:textColor="@color/primary"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/productFees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/product_fees"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CheckOut" />

            <TextView
                android:id="@+id/deliveryFeesET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/delivery_fees"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/productFees"
                app:layout_constraintTop_toBottomOf="@+id/productFees" />

            <TextView

                android:id="@+id/DiscountValueET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/discount"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/deliveryFeesET"
                app:layout_constraintTop_toBottomOf="@+id/deliveryFeesET"
                app:layout_constraintVertical_bias="0.281" />

            <TextView

                android:id="@+id/totalTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/total_price"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/DiscountValueET"
                app:layout_constraintTop_toBottomOf="@+id/DiscountValueET" />

            <TextView

                android:id="@+id/totalPriceTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="100 EGP"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/totalTV"
                app:layout_constraintStart_toEndOf="@id/totalTV"
                app:layout_constraintTop_toTopOf="@id/totalTV" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/checkoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/primary"
        android:text="@string/checkout"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/CheckOutCard"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/CheckOutCard"
        app:layout_constraintTop_toBottomOf="@+id/CheckOutCard"
        app:layout_constraintVertical_bias="0.012"
        app:rippleColor="@color/black" />
<!--    <com.paypal.checkout.paymentbutton.PaymentButtonContainer
        android:id="@+id/payment_button_container"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/CheckOutCard"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/CheckOutCard"
        app:layout_constraintTop_toBottomOf="@+id/CheckOutCard"
        app:paypal_button_color="silver"
        app:paypal_button_enabled="true"
        app:paypal_button_label="pay"
        app:paypal_button_shape="rectangle"
        app:paypal_button_size="large" />-->
</androidx.constraintlayout.widget.ConstraintLayout>