<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.signup.SignUpFragment">


        <TextView
            android:id="@+id/sign_up_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/primary"
            android:textSize="60sp"
            app:layout_constraintStart_toStartOf="@+id/sign_up_left_guideline"
            app:layout_constraintTop_toTopOf="@+id/sign_up_top_guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/sign_up_top_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/sign_up_left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/sign_up_right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <TextView
            android:id="@+id/sign_up_welcome_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_in_frenzy"
            android:textColor="@color/gray"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/sign_up_txt"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/sign_up_txt"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_txt" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_emailTextField"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintHorizontal_bias="0.5"
            android:hint="@string/email"
            app:boxStrokeColor="#000000"
            android:background="@color/white"
            android:textColorHint="@color/gray"
            app:startIconDrawable="@drawable/email_icon"
            app:layout_constraintStart_toStartOf="@id/sign_up_left_guideline"
            app:layout_constraintEnd_toStartOf="@id/sign_up_right_guideline"
            app:layout_constraintTop_toBottomOf="@id/sign_up_welcome_txt"
            android:layout_margin="40dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_usernameTextField"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            app:layout_constraintHorizontal_bias="0.5"
            android:hint="@string/username"
            app:boxStrokeColor="#000000"
            android:layout_margin="40dp"
            android:textColorHint="@color/gray"
            app:startIconDrawable="@drawable/username_icon"
            app:layout_constraintStart_toStartOf="@id/sign_up_emailTextField"
            app:layout_constraintEnd_toStartOf="@id/sign_up_emailTextField"
            app:layout_constraintTop_toBottomOf="@id/sign_up_emailTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_passwordTextField"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            app:layout_constraintHorizontal_bias="0.5"
            android:hint="@string/password"
            app:boxStrokeColor="#000000"
            android:layout_margin="40dp"
            android:textColorHint="@color/gray"
            app:startIconDrawable="@drawable/lock_icon"
            app:layout_constraintStart_toStartOf="@id/sign_up_usernameTextField"
            app:layout_constraintEnd_toStartOf="@id/sign_up_usernameTextField"
            app:layout_constraintTop_toBottomOf="@id/sign_up_usernameTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_confirm_passwordTextField"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            app:layout_constraintHorizontal_bias="0.5"
            android:hint="@string/confirm_password"
            app:boxStrokeColor="#000000"
            android:layout_margin="40dp"
            android:textColorHint="@color/gray"
            app:startIconDrawable="@drawable/lock_icon"
            app:layout_constraintStart_toStartOf="@id/sign_up_passwordTextField"
            app:layout_constraintEnd_toStartOf="@id/sign_up_passwordTextField"
            app:layout_constraintTop_toBottomOf="@id/sign_up_passwordTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="90dp"
            android:layout_marginEnd="90dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:backgroundTint="@color/primary"
            app:layout_constraintEnd_toEndOf="@+id/sign_up_confirm_passwordTextField"
            app:layout_constraintStart_toStartOf="@+id/sign_up_confirm_passwordTextField"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_confirm_passwordTextField" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@id/sign_up_right_guideline"
            app:layout_constraintHorizontal_bias="0.415"
            app:layout_constraintStart_toEndOf="@id/sign_up_left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_btn" />

        <TextView
            android:id="@+id/txt_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/primary"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

